--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@shared-packages/core",
+  "name": "@amalpsojan/core",
   "version": "0.0.1",
-  "private":true,
+  "private":false,
   "scripts": {},
   "peerDependencies": {
     "react": "*"
