--- a/packages/mobile-theme/package.json
+++ b/packages/mobile-theme/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@shared-packages/mobile-theme",
+  "name": "@amalpsojan/mobile-theme",
   "version": "0.0.1",
-  "private":true,
+  "private":false,
   "scripts": {},
   "peerDependencies": {
     "react": "*",
