--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -13,7 +13,7 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "@shared-packages/mobile-theme": "*"
+    "@amalpsojan/mobile-theme": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
