--- a/packages/web-theme/package.json
+++ b/packages/web-theme/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@amalpsojan/web-theme",
+  "name": "amalpsojan/web-theme",
   "version": "0.0.1",
   "private":false,
   "scripts": {
@@ -9,6 +9,6 @@
     "react": "*"
   },
   "dependencies": {
-    "@amalpsojan/web-core":"0.0.1"
+    "amalpsojan/web-core":"0.0.1"
   }
 }
