--- a/packages/mobile-theme/package.json
+++ b/packages/mobile-theme/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "amalpsojan/mobile-theme",
+  "name": "@amalpsojan/mobile-theme",
   "version": "0.0.1",
   "private":false,
   "scripts": {},
