--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "awsome-shared-packages",
   "version": "0.0.1",
   "private": true,
-  "scripts": {
-   
-  },
+  "scripts": {},
   "workspaces": {
     "packages": [
       "apps/*",
       "packages/*"
     ]
   },
-  "packageManager": "yarn@1.22.19"
+  "packageManager": "yarn@1.22.19",
+  "dependencies": {
+    "@changesets/cli": "^2.27.1"
+  }
 }
