--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "awsome-shared-packages",
   "version": "0.0.1",
   "private": true,
-  "scripts": {},
+  "scripts": {
+    "android":"turbo android",
+    "publish":"changeset version && changeset publish"
+  },
   "workspaces": {
     "packages": [
       "apps/*",
